sbotools
Post-3.0
  * sbofind: Allow multiple search terms
  * Add a summary sbotools(1) man page with executive summaries and a startup guide
  * sboinstall: Use --mass-rebuild to rebuild all non-compat32 SlackBuilds
  * sboconfig: Fix incorrect misconfiguration warnings
  * sbocheck: More compact output.
  * sbotools.hints: User-specified blacklist and optional dependency requests

3.0 - 2024-11-22
  * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
  * sboremove: Remove undocumented and dangerous nointeractive option
  * sbofind: Use --reverse to check for installed reverse dependencies
  * Add setting CLASSIC; turn on BUILD_IGNORE and RSYNC_DEFAULT, and disable output added post-sbotools
  * Fix some --help verbiage

Please note that this repository was renamed from sbotools3 to sbotools before the release of sbotools-3.0.

sbotools3 1.1 - 2024-11-03
  * Bugfix: incorrect variable name caused sboupgrade to rebuild when unneeded.

sbotools3 1.0 - 2024-11-01
  * Change the git branch to match the Slackware version, or to a user-configured branch
  * Change the default URLs to support Slackware 15.0 and use git repositories
  * Use rsync default mirrors with RSYNC_DEFAULT (except for -current)
  * Detect build number changes and optionally upgrade
  * Detect and report out-of-tree _SBo SlackBuilds with sbocheck
  * Save any build options when running a SlackBuild
  * Install bash completions; zsh completions have been updated
  * Install a default configuration file; tweak sboconfig to play somewhat nicely with it

Historical Changes
Development from version 1.9 through 2.7 took place at the pink-mist/sbotools repository.

Post-2.7 - 2019
  * Add and install zsh completions

2.7 - 2019-04-28
  * Actually fix the sbofind -e bug
    (https://github.com/pink-mist/sbotools/issues/71)

2.6 - 2019-04-27
  * Fix change in new perl versions where you need to escape { in regexp
    (https://github.com/pink-mist/sbotools/issues/75)