@@ -6,6 +6,7 @@ Post-3.0
   * sboconfig: Fix incorrect misconfiguration warnings
   * sbocheck: More compact output.
   * sbotools.hints: User-specified blacklist and optional dependency requests
+  * Bugfix: Prevent undefined build number checks with a local override directory
 
 3.0 - 2024-11-22
   * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
